# finance-data-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
finance_data_agent/: cli.py  config.py  factor_runner.py  qlib_integration  rd_loop.py
finance_data_agent/experiment/: factor_experiment.py
finance_data_agent/llm/: api_backend.py
finance_data_agent/logging/: logger.py
finance_data_agent/prompts/: qlib_prompts.yaml
finance_data_agent/utils/: tpl.py
