[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-data-agent"
version = "0.1.0"
description = "Standalone Finance Data Agent: factor proposing/implementation/backtesting on Qlib."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9",
  "pydantic-settings>=2.2",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "pandas>=2.0",
  "numpy>=1.24",
  "pyqlib>=0.9.0",
  "requests>=2.31",
]

[project.scripts]
fda = "finance_data_agent.cli:app"